# ml-zoomcamp

./: Dockerfile  README.md  pyproject.toml
01-intro/: appendix-c-numpy.ipynb  appendix-d-pandas.ipynb  homework-1.ipynb  homework.ipynb  numpy.ipynb  pyproject.toml  test.py
02-regression/: 02-car_price_regression.ipynb  homework.ipynb  practise.ipynb
03-churn/: 03-churn-prediction.ipynb  homework.ipynb  homework_cohort.ipynb  practise.ipynb
04-evaluation/: homework.ipynb
05-deployment/: ping.py  post.ipynb  predict.py  train-churn-model.ipynb  train.py
05-deployment/homework/: hw.ipynb  train.py
06-trees/: homework.ipynb  notebook.ipynb
1.Introduction_to_machine_learning/: linear_algebra.ipynb  pandas.ipynb
