[tool.poetry]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Ram Krishna Singh <rkscodes@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_zoomcamp"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^0.8.0"
numpy = "1.23.2"
xgboost = "^1.7.5"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
